subiendo cursor chulo

--- a/src/styles/Light.css
+++ b/src/styles/Light.css
@@ -2,5 +2,9 @@
     width: 200px;
     aspect-ratio: 1 / 1;
     border-radius: 50%;
-    cursor: pointer;
+    cursor: grab;
+}
+
+.light:active{
+    cursor: grabbing;
 }
